overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 body {
     background: rgb(111, 0, 0);
     background: radial-gradient(circle, rgb(77, 8, 8) 0%, rgba(32, 1, 34, 1) 100%);
